[package]
name = "ez_doom"
version = "0.1.0"
authors = ["Kyle Coffey <kylecoffey1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitflags = "^1.2"
sdl2 = "^0.34"
atty = "^0.2"
num = "^0.3"
parking_lot = "^0.11"
nom = "^5.1"
